# monad-network-class

./: .gitignore  default.nix  monad-network-class.cabal
Control/Monad/Ether/Network/: Class.hs
Control/Monad/Network/: Class.hs
Control/Monad/Network/Class/: Tagged.hs
