name:           monad-network-class
version:        0.0.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     Vladimir Sorokin <v.d.sorokin@gmail.com>
synopsis:       Monad connection class
description:    Monad class for connections
category:       Network
build-type:     Simple
cabal-version:  >=1.10
homepage:       http://github.com/vladsor/monad-network-class
bug-reports:    http://github.com/vladsor/monad-network-class/issues

Library
    default-language: Haskell2010
    build-depends: base, bytestring, ether < 0.5.0.0, transformers
    exposed-modules: Control.Monad.Network.Class, Control.Monad.Ether.Network.Class

    ghc-options: -fwarn-incomplete-patterns -O2 -auto-all -caf-all -fprof-auto -funfolding-use-threshold=16
