name:           monad-network-class
version:        0.0.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     Vladimir Sorokin <v.d.sorokin@gmail.com>
synopsis:       Monad connection class
description:    Monad class for connections
category:       Network
build-type:     Simple
cabal-version:  >=1.10
homepage:       http://github.com/vladsor/monad-network-class
bug-reports:    http://github.com/vladsor/monad-network-class/issues

Library
    default-language: Haskell2010
    build-depends: base, bytestring
      , mtl, transformers, tagged-transformer
    exposed-modules: Control.Monad.Network.Class, Control.Monad.Network.Class.Tagged

    ghc-options: -fwarn-incomplete-patterns -O2 -fprof-auto -funfolding-use-threshold=16 -fprint-potential-instances
